# skhd-config-manger

./: .eslintrc.cjs  .gitignore  AUTO_MERGE_SETUP.md  CHANGELOG.md  CLAUDE.md  FINAL_STEPS.md  LICENSE  Makefile  PR_DETAILS.md  README.md  RELEASE_NOTES_v0.6.0-beta.1.md  RELEASE_STEPS.md  eslint.config.js  package-lock.json  package.json  test-skhdrc  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  pr-checks.yml  (+1 more)
claudedocs/: manual-test-checklist-006.md  spec-kit-methodology-summary.md
scripts/: README.md  bump-version.sh  generate-icons.sh  refresh-mac-icons.sh
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: applications.rs  backups.rs  config.rs  file_picker.rs  logs.rs  mod.rs  service.rs  shortcuts.rs  templates.rs  testing.rs  theme.rs  validation.rs
src-tauri/src/data/: command_templates.json
src-tauri/src/models/: application.rs  backup.rs  command_category.rs  command_template.rs  config.rs  log_entry.rs  mod.rs  service_status.rs  shortcut.rs  test_result.rs
src-tauri/src/parser/: ast.rs  grammar.pest  mod.rs
src-tauri/src/services/: app_discovery.rs  backup.rs  file_io.rs  log_tailer.rs  mod.rs  path_validator.rs  service_manager.rs  template_loader.rs  theme_monitor.rs  validation.rs
src-tauri/src/utils/: mod.rs  path.rs  theme.rs
src-tauri/tests/: command_execution.rs  log_parser.rs  theme_command_test.rs  theme_integration_test.rs  theme_monitor_test.rs  theme_performance_test.rs
src-tauri/tests/fixtures/: basic.skhdrc  duplicates.skhdrc  empty.skhdrc  sample_logs.txt  with_errors.skhdrc
(+95 files in other folders)
