[package]
name = "skhd-gui"
version = "0.1.0"
description = "Native macOS GUI for managing skhd keyboard shortcuts"
authors = ["skhd-gui contributors"]
edition = "2021"

[lib]
name = "skhd_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2.7"
pest_derive = "2.7"
tempfile = "3.8"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"

[dev-dependencies]
mockall = "0.12"

