[package]
name = "keybinder"
version = "0.2.2"
description = "A modern, intuitive macOS app for managing skhd keyboard shortcuts"
authors = ["Keybinder contributors"]
edition = "2021"

[lib]
name = "keybinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2.7"
pest_derive = "2.7"
tempfile = "3.8"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
rfd = "0.14"
dirs = "5.0"
regex = "1.10"
lazy_static = "1.4"
tokio = { version = "1.40", features = ["process", "time", "macros", "rt"] }

[dev-dependencies]
mockall = "0.12"

